# citkid

./: .gitignore  .gitignore.swp  README.md  environment.yml  pyproject.toml
citkid/: util.py
citkid/crs/: cic.py  instrument.py  instrument_old.py  instrument_single.py  procedures.py  util.py
citkid/mattis_bardeen/: model.py
citkid/multitone/: analysis.py  ares.py  data_io.py  fres.py  plot.py  procedures.py  util.py
citkid/noise/: analysis.py  cal.py  cosmic_rays.py  data_io.py  funcs.py  pca.py  plot.py  psd.py  timestream_filter.py
citkid/prima_readout/: apply_cal.py  average.py  cosmic_rays.py  create_cal.py  data_io.py  generator.py  plot.py  pulses.py  template.ipynb
citkid/primecam/: .gitignore  _config.py  analysis.py  data_io.py  dump.rdb  fres_update.py  instrument.py  plot.py  procedures.py  redis.conf  update_ares.py  update_fres.py
citkid/primecam/cal_data/: dbm_powers.npy  ref_dbm_pdiffs.npy  ref_freqs.npy  rfsoc_powers.npy
citkid/psd/: funcs.py
citkid/res/: data_io.py  fitter.py  funcs.py  gain.py  generator.py  guess.py  guess_old.py  interactive_peak_finder.py  mcmc.py  plot.py  util.py  util_old.py
citkid/res_vs_temp/: data_io.py  fitter.py  funcs.py  guess.py  plot.py
citkid/responsivity/: data_io.py  fitter.py  funcs.py  guess.py  mcmc.py  plot.py
citkid/rf_design/: transmission_line.py
